--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,6 +432,7 @@ a:hover {
   color: #fff;
   width: 100%;
   height: 100vh;
+  background-attachment: fixed;
 }
 
 .hero:after {
@@ -638,7 +639,7 @@ a:hover {
   ================================================== */
 .cta {
   background-color: var(--theme-color);
-  padding: 25px 0;
+  padding: 50px 0;
 }
 
 .cta h2 {
