--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,15 @@ a:hover {
   text-transform: uppercase;
 }
 
+a.call-button {
+  background: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  margin-left: 1.5rem;
+  gap: 0.5rem;
+  font-weight: bold;
+}
+
 #header #logo h1 a,
 #header #logo h1 a:hover {
   color: var(--theme-white);
